WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23863
Reproducible crash in Mail with TOT WebKit when creating a new message
https://bugs.webkit.org/show_bug.cgi?id=23863
Summary
Reproducible crash in Mail with TOT WebKit when creating a new message
Mark Rowe (bdash)
Reported
2009-02-09 19:42:18 PST
Creating a new message in Mail running with TOT WebKit reproducibly crashes:
>#0 com.apple.WebKit 0x006d71c7 -[WebHTMLView(WebHTMLViewFileInternal) _removeSuperviewObservers] + 21 (WebHTMLView.mm:786)
#1 com.apple.WebKit 0x006d4c3a -[WebHTMLView viewWillMoveToSuperview:] + 36 (WebHTMLView.mm:2741) #2 com.apple.AppKit 0x90402919 -[NSView _setSuperview:] + 279
Attachments
Patch
(2.36 KB, patch)
2009-02-09 19:44 PST
,
Mark Rowe (bdash)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-02-09 19:42:52 PST
<
rdar://problem/6571390
>
Mark Rowe (bdash)
Comment 2
2009-02-09 19:44:20 PST
Created
attachment 27514
[details]
Patch
Mark Rowe (bdash)
Comment 3
2009-02-09 21:21:01 PST
Fixed in
r40806
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug