Fix <https://bugs.webkit.org/show_bug.cgi?id=23863> / <rdar://problem/6571390>. Bug 23863: Reproducible crash in Mail with TOT WebKit when creating a new message

Reviewed by Dan Bernstein.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _removeMouseMovedObserverUnconditionally]): Nil-check _private as it may have not
yet been initialized if this WebHTMLView was loaded from a nib.
(-[WebHTMLView _removeSuperviewObservers]): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@40806 bbb929c8-8fbe-4397-9dbb-9b2b20218538