third_party/WebKit/WebKit/mac/WebView/WebHTMLView.mm
@@ -775,7 +775,7 @@ static NSURL* uniqueURLWithRelativePart(NSString *relativePart)
 
 - (void)_removeMouseMovedObserverUnconditionally
 {
-    if (!_private->observingMouseMovedNotifications)
+    if (!_private || !_private->observingMouseMovedNotifications)
         return;
     
     [[NSNotificationCenter defaultCenter] removeObserver:self name:WKMouseMovedNotification() object:nil];
@@ -784,7 +784,7 @@ static NSURL* uniqueURLWithRelativePart(NSString *relativePart)
 
 - (void)_removeSuperviewObservers
 {
-    if (!_private->observingSuperviewNotifications)
+    if (!_private || !_private->observingSuperviewNotifications)
         return;
     
     NSView *superview = [self superview];
